[Fuchsia] Remove dependency on deprecated ioctl_netc_get_if_info()

ioctl_netc_get_if_info() has been replaced with ioctl_netc_get_num_ifs()
and ioctl_netc_get_num_ifs(). Update the corresponding code in //net.

Bug: 818320
Change-Id: I42746f97616000f8839bcb0433c42e1d7feca129
Reviewed-on: https://chromium-review.googlesource.com/956613
Commit-Queue: Sergey Ulanov <sergeyu@chromium.org>
Reviewed-by: Matt Menke <mmenke@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542236}
Former-commit-id: 61bdd884234836de0af39829d55eb1a84b7ce0fe