net/base/network_interfaces_fuchsia.cc
@@ -18,37 +18,38 @@ bool GetNetworkList(NetworkInterfaceList* networks, int policy) {
     return false;
   }
 
-  netc_get_if_info_t netconfig;
-  int size = ioctl_netc_get_if_info(s, &netconfig);
-  PCHECK(close(s) == 0);
-
-  if (size < 0) {
-    PLOG(ERROR) << "ioctl_netc_get_if_info";
+  uint32_t num_ifs = 0;
+  if (ioctl_netc_get_num_ifs(s, &num_ifs) < 0) {
+    PLOG(ERROR) << "ioctl_netc_get_num_ifs";
+    PCHECK(close(s) == 0);
     return false;
   }
 
-  networks->clear();
+  for (uint32_t i = 0; i < num_ifs; ++i) {
+    netc_if_info_t interface;
 
-  for (size_t i = 0; i < netconfig.n_info; ++i) {
-    netc_if_info_t* interface = netconfig.info + i;
+    if (ioctl_netc_get_if_info_at(s, &i, &interface) < 0) {
+      PLOG(WARNING) << "ioctl_netc_get_if_info_at";
+      continue;
+    }
 
     // Skip loopback addresses.
     if (internal::IsLoopbackOrUnspecifiedAddress(
-            reinterpret_cast<sockaddr*>(&(interface->addr)))) {
+            reinterpret_cast<sockaddr*>(&(interface.addr)))) {
       continue;
     }
 
     IPEndPoint address;
-    if (!address.FromSockAddr(reinterpret_cast<sockaddr*>(&(interface->addr)),
-                              sizeof(interface->addr))) {
+    if (!address.FromSockAddr(reinterpret_cast<sockaddr*>(&(interface.addr)),
+                              sizeof(interface.addr))) {
       DLOG(WARNING) << "ioctl_netc_get_if_info returned invalid address.";
       continue;
     }
 
     int prefix_length = 0;
     IPEndPoint netmask;
-    if (netmask.FromSockAddr(reinterpret_cast<sockaddr*>(&(interface->netmask)),
-                             sizeof(interface->netmask))) {
+    if (netmask.FromSockAddr(reinterpret_cast<sockaddr*>(&(interface.netmask)),
+                             sizeof(interface.netmask))) {
       prefix_length = MaskPrefixLength(netmask.address());
     }
 
@@ -58,10 +59,12 @@ bool GetNetworkList(NetworkInterfaceList* networks, int policy) {
     int attributes = 0;
 
     networks->push_back(
-        NetworkInterface(interface->name, interface->name, interface->index,
+        NetworkInterface(interface.name, interface.name, interface.index,
                          NetworkChangeNotifier::CONNECTION_UNKNOWN,
                          address.address(), prefix_length, attributes));
   }
+
+  PCHECK(close(s) == 0);
 
   return true;
 }
